; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/mouse/extr_alps.c_alps_hw_init_dolphin_v1.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/mouse/extr_alps.c_alps_hw_init_dolphin_v1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.psmouse = type { %struct.ps2dev }
%struct.ps2dev = type { i32 }

@PSMOUSE_CMD_SETSTREAM = common dso_local global i32 0, align 4
@PSMOUSE_CMD_SETRATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.psmouse*)* @alps_hw_init_dolphin_v1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alps_hw_init_dolphin_v1(%struct.psmouse* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.psmouse*, align 8
  %4 = alloca %struct.ps2dev*, align 8
  %5 = alloca [2 x i8], align 1
  store %struct.psmouse* %0, %struct.psmouse** %3, align 8
  %6 = load %struct.psmouse*, %struct.psmouse** %3, align 8
  %7 = getelementptr inbounds %struct.psmouse, %struct.psmouse* %6, i32 0, i32 0
  store %struct.ps2dev* %7, %struct.ps2dev** %4, align 8
  %8 = getelementptr inbounds [2 x i8], [2 x i8]* %5, i64 0, i64 0
  store i8 100, i8* %8, align 1
  %9 = getelementptr inbounds [2 x i8], [2 x i8]* %5, i64 0, i64 1
  store i8 40, i8* %9, align 1
  %10 = load %struct.ps2dev*, %struct.ps2dev** %4, align 8
  %11 = load i32, i32* @PSMOUSE_CMD_SETSTREAM, align 4
  %12 = call i64 @ps2_command(%struct.ps2dev* %10, i8* null, i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %26, label %14

14:                                               ; preds = %1
  %15 = load %struct.ps2dev*, %struct.ps2dev** %4, align 8
  %16 = getelementptr inbounds [2 x i8], [2 x i8]* %5, i64 0, i64 0
  %17 = load i32, i32* @PSMOUSE_CMD_SETRATE, align 4
  %18 = call i64 @ps2_command(%struct.ps2dev* %15, i8* %16, i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %26, label %20

20:                                               ; preds = %14
  %21 = load %struct.ps2dev*, %struct.ps2dev** %4, align 8
  %22 = getelementptr inbounds [2 x i8], [2 x i8]* %5, i64 0, i64 1
  %23 = load i32, i32* @PSMOUSE_CMD_SETRATE, align 4
  %24 = call i64 @ps2_command(%struct.ps2dev* %21, i8* %22, i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %20, %14, %1
  store i32 -1, i32* %2, align 4
  br label %28

27:                                               ; preds = %20
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %27, %26
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i64 @ps2_command(%struct.ps2dev*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
